[package]
name = "mber"
description = "rust rewrite of ember-cli"
license = "MIT"
license_file = "LICENSE.md"
repository = "https://github.com/izelnakri/mber-rust"
version = "0.1.1"
authors = ["Izel Nakri <contact@izelnakri.com>"]
edition = "2018"

[dependencies]
yansi = "0.5.0"
hyper = "0.12.34"
# tokio = "0.1.22"
# tokio-fs = "0.1.6"
