[package]
version = "0.1.5"
name = "mber"
build = "build.rs"
description = "rust rewrite of ember-cli"
authors = ["Izel Nakri <contact@izelnakri.com>"]
keywords = ["cli", "ember-cli", "javascript", "frontend", "testing"]
license = "MIT"
repository = "https://github.com/izelnakri/mber-rust"
readme = "README.md"
edition = "2018"

[badges]
circle-ci = { repository = "izelnakri/mber-rust", branch = "master" }

[dependencies]
yansi = "0.5.0"
walkdir = "2.2.9"
Inflector = "0.11.4"
hyper = "0.12.34"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
mustache = "0.9.0"
# swc_ecma_transforms = "0.1.2"
# tokio = "0.1.22"
# tokio-fs = "0.1.6"

[build-dependencies]
walkdir = "2.2.9"
toml = "0.5.3"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
mustache = "0.9.0"
